; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_json.c_print_json_block.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_json.c_print_json_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"%.*s\22data\22: \22\00", align 1
@TAB = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [2 x i8] c"\22\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_11__*, i32)* @print_json_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_json_block(i32* %0, %struct.TYPE_11__* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_11__*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_11__* %1, %struct.TYPE_11__** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @phits(i32* %7, %struct.TYPE_11__* %8, i32 %9)
  %11 = load i32*, i32** %4, align 8
  %12 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @pvisitors(i32* %11, %struct.TYPE_11__* %12, i32 %13)
  %15 = load i32*, i32** %4, align 8
  %16 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @pbw(i32* %15, %struct.TYPE_11__* %16, i32 %17)
  %19 = load i32*, i32** %4, align 8
  %20 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @pavgts(i32* %19, %struct.TYPE_11__* %20, i32 %21)
  %23 = load i32*, i32** %4, align 8
  %24 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @pcumts(i32* %23, %struct.TYPE_11__* %24, i32 %25)
  %27 = load i32*, i32** %4, align 8
  %28 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @pmaxts(i32* %27, %struct.TYPE_11__* %28, i32 %29)
  %31 = load i32*, i32** %4, align 8
  %32 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @pmethod(i32* %31, %struct.TYPE_11__* %32, i32 %33)
  %35 = load i32*, i32** %4, align 8
  %36 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %37 = load i32, i32* %6, align 4
  %38 = call i32 @pprotocol(i32* %35, %struct.TYPE_11__* %36, i32 %37)
  %39 = load i32*, i32** %4, align 8
  %40 = load i32, i32* %6, align 4
  %41 = load i32, i32* @TAB, align 4
  %42 = call i32 (i32*, i8*, ...) @pjson(i32* %39, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %40, i32 %41)
  %43 = load i32*, i32** %4, align 8
  %44 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %45 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  %47 = call i32 @escape_json_output(i32* %43, i32 %46)
  %48 = load i32*, i32** %4, align 8
  %49 = call i32 (i32*, i8*, ...) @pjson(i32* %48, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @phits(i32*, %struct.TYPE_11__*, i32) #1

declare dso_local i32 @pvisitors(i32*, %struct.TYPE_11__*, i32) #1

declare dso_local i32 @pbw(i32*, %struct.TYPE_11__*, i32) #1

declare dso_local i32 @pavgts(i32*, %struct.TYPE_11__*, i32) #1

declare dso_local i32 @pcumts(i32*, %struct.TYPE_11__*, i32) #1

declare dso_local i32 @pmaxts(i32*, %struct.TYPE_11__*, i32) #1

declare dso_local i32 @pmethod(i32*, %struct.TYPE_11__*, i32) #1

declare dso_local i32 @pprotocol(i32*, %struct.TYPE_11__*, i32) #1

declare dso_local i32 @pjson(i32*, i8*, ...) #1

declare dso_local i32 @escape_json_output(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
